SERVER-13616 "type 7" (OID) error when acquiring distributed lock for first time