src/mongo/s/distlock.cpp
@@ -623,7 +623,11 @@ namespace mongo {
             if ( o.isEmpty() ) {
                 try {
                     LOG( logLvl ) << "inserting initial doc in " << LocksType::ConfigNS << " for lock " << _name << endl;
-                    conn->insert( LocksType::ConfigNS , BSON( LocksType::name(_name) << LocksType::state(0) << LocksType::who("") ) );
+                    conn->insert( LocksType::ConfigNS,
+                                  BSON( LocksType::name(_name)
+                                        << LocksType::state(0)
+                                        << LocksType::who("")
+                                        << LocksType::lockID(OID()) ));
                 }
                 catch ( UserException& e ) {
                     warning() << "could not insert initial doc for distributed lock " << _name << causedBy( e ) << endl;
